Bug 824395 - Report used stacks separately from unused stacks. r=njn