memory/replace/dmd/DMD.h
@@ -52,7 +52,8 @@ FpWrite(void* aFp, const char* aFmt, va_list aAp);
 
 struct Sizes
 {
-  size_t mStackTraces;
+  size_t mStackTracesUsed;
+  size_t mStackTracesUnused;
   size_t mStackTraceTable;
   size_t mBlockTable;
 
